Ajout de filtre de recherche
