# middleware/providersValidation.js
@@ -4,6 +4,8 @@ const { BADREQUEST_STATUS } = require("../constants/constants");
 const ErrorResponseDTO = require("../dto/ErrorReponseDTO");
 const { checkValidation } = require("../utils/checkValidation");
 
+
+//POST
 const providerValidationPOST = z.object({
     name_provider: stringValidator(50),
 });
@@ -17,7 +19,7 @@ exports.postProvidersValidation = async (req,res,next) => {
     }
 };
 
-
+//DELETE
 const providerValidationDELETE = z.object({
     name_provider: stringValidator(50),
   });
@@ -32,6 +34,7 @@ exports.deleteProvidersValidation = async (req,res,next) => {
     }
 };
 
+//PUT
 const providerValidationPUT = z.object({
     name_provider: stringValidator(50),
     new_name_provider: stringValidator(50),
@@ -40,6 +43,22 @@ const providerValidationPUT = z.object({
 exports.putProvidersValidation = async (req,res,next) => {
     try {
         await checkValidation(providerValidationPUT, req.body)
+        next()
+    } catch (error) {
+        return res.status(BADREQUEST_STATUS).json(new ErrorResponseDTO(error.message, error.cause, BADREQUEST_STATUS))
+    }
+};
+
+//GET
+
+const providerValidationGET = z.object({
+    provider: stringValidator(50).optional(),
+  });
+
+
+exports.getProvidersValidation = async (req,res,next) => {
+    try {
+        await checkValidation(providerValidationGET, req.query)
         next()
     } catch (error) {
         return res.status(BADREQUEST_STATUS).json(new ErrorResponseDTO(error.message, error.cause, BADREQUEST_STATUS))
